--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,19 @@
 #nav_bar {
-  background-color: gray;
   position: fixed;
   width: 100%;
-}
-
-#search {
-  width: 1000px;
-  margin-top: 20px;
+  height: 50px;
+  margin-bottom: 1000px;
 }
 
 #search_field {
   width: 35%;
   height: 25px;
+}
+
+#search_submit img {
+  background-image: url(/img/search.png);
+  background-repeat: no-repeat;
+  background-position: right;
 }
 
 #img_container {
@@ -20,8 +22,24 @@
 
 img {
   margin-left: 30px;
+  display: inline;
 }
 
 #right_top {
+  background-color: gray;
+  width: 30%;
+}
 
+#right_top li{
+  display: inline;
+  margin: 10px;
+  background-color: red;
+}
+
+#video {
+  margin-top: 80px;
+  margin-left: 100px;
+}
+
+#video_title {
 }
