--- a/css/styles.css
+++ b/css/styles.css
@@ -2,38 +2,44 @@
   position: fixed;
   width: 100%;
   height: 50px;
-  margin-bottom: 1000px;
-}
-
-#search_field {
-  width: 35%;
-  height: 25px;
-}
-
-#search_submit img {
-  background-image: url(/img/search.png);
-  background-repeat: no-repeat;
-  background-position: right;
-}
-
-#img_container {
-  display: inline;
+  background-color: white;
+  margin: 0;
 }
 
 img {
-  margin-left: 30px;
-  display: inline;
+  margin: 0;
+  margin-left: 60px;
+  margin-top: 0px;
+}
+
+#search_field {
+  width: 500px;
+  height: 25px;
+  margin-left: 35%;
+  margin-top: 0px;
+}
+
+#search_submit {
+  margin-left: 175px;
+  margin-right: 90px;
+  width: 70px;
+  height: 31px;
 }
 
 #right_top {
-  background-color: gray;
-  width: 30%;
+  margin: 0;
+  padding: 0;
 }
 
-#right_top li{
-  display: inline;
-  margin: 10px;
-  background-color: red;
+#right_top li {
+  list-style-type: none;
+  padding: 0;
+  float: left;
+}
+
+a {
+  display: block;
+  padding: 8px;
 }
 
 #video {
@@ -41,5 +47,7 @@ img {
   margin-left: 100px;
 }
 
-#video_title {
+h1 {
+  margin: 0;
+  padding: 0;
 }
