--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,11 @@
   position: fixed;
   width: 100%;
   height: 50px;
-  background-color: white;
+  background-color: red;
   margin: 0;
 }
+
+body { margin: 0;}
 
 img {
   margin: 0;
@@ -16,12 +18,13 @@ img {
   width: 500px;
   height: 25px;
   margin-left: 35%;
-  margin-top: 0px;
+  margin-top: 2%;
 }
 
 #search_submit {
   margin-left: 175px;
   margin-right: 90px;
+  margin-top: 3%;
   width: 70px;
   height: 31px;
 }
