Navbar fix resize

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,43 +1,55 @@
 #nav_bar {
   position: fixed;
   width: 100%;
-  height: 50px;
-  background-color: red;
+  height: 60px;
+  background-color: white;
   margin: 0;
+  overflow: auto;
 }
 
-body { margin: 0;}
-
-img {
+#youtube_logo {
   margin: 0;
-  margin-left: 60px;
   margin-top: 0px;
 }
 
+#bars {
+  margin: 0;
+  padding: 0;
+  margin-top: 4px;
+  width: 3%;
+}
+
 #search_field {
-  width: 500px;
+  width: 100%;
   height: 25px;
   margin-left: 35%;
-  margin-top: 2%;
+  margin-top: 0;
+  clear: right;
 }
 
 #search_submit {
   margin-left: 175px;
-  margin-right: 90px;
-  margin-top: 3%;
+  margin-right: 50px;
   width: 70px;
   height: 31px;
 }
 
-#right_top {
-  margin: 0;
-  padding: 0;
+li {
+  list-style-type: none;
+  float: left;
+  border-radius: 10px;
+  padding:0;
 }
 
-#right_top li {
-  list-style-type: none;
-  padding: 0;
-  float: left;
+.search_nav {
+  width: 40%;
+}
+
+.right_top {
+  float:right;
+  margin-right: 10px;
+  width: 4%;
+  text-align: center;
 }
 
 a {
@@ -52,4 +64,10 @@ a {
 
 h1 {
   margin-left: 100px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: gray;
 }
